--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Non-clinical emotional learning tool - NCMH Wellbeing App" />
+    <meta name="description" content="Shaheen - Arabic emotional learning and wellbeing companion" />
     <meta name="theme-color" content="#3b82f6" />
     
     <!-- Fonts -->
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Noto+Sans+Arabic:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     
-    <title>NCMH Wellbeing App</title>
+    <title>Shaheen</title>
   </head>
   <body>
     <div id="root"></div>
